--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Source Code Pro', monospace;
+}
+
 section {
     height: 500px;
     background-color: mintcream;
@@ -23,8 +27,57 @@ nav {
 
 ul {
     display: flex;
+    list-style-type: none;
+    width: 500px;
+    justify-content: space-around;
+    font-size: 30px;
 }
 
 li {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 90px;
+    margin: 0;
+}
+
+p {
+    margin: o;
+    font-weight: 300;
+}
+
+.heroArea {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+
+}
+
+.heroText {
+    margin-left: 80px;
+    Margin-bottom: 200px;
+}
+
+.button {
+    color:#1c1d25;
     width: 200px;
+    height: 55px;
+    border-radius: 25px;
+    background-color: beige;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 300px;
+    padding-top: 5px;
+    margin-top: 20px;
+}
+
+.button:hover {
+    background-color: lightblue;
+}
+
+.button:active {
+    background-color: azure;
+    color: #a9a9a9
 }
