linked my principle component analysis, styled

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,11 @@ p {
     font-weight: 300;
 }
 
+.subtext {
+    font-size: 15px;
+    font-weight: 300;
+}
+
 .heroArea {
     display: flex;
     height: 100%;
@@ -114,7 +119,7 @@ p {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 80px;
+    padding: 50px;
 }
 
 .mugShot {
@@ -128,12 +133,29 @@ p {
 }
 
 .map-example {
-    width: 200px;
+    width: 300px;
     height: 500px;
     box-shadow: 5px 5px 20px rgb(192, 192, 192);
+    margin: 10px;
 }
 
 .mapsContainer {
     display: flex;
     justify-content: space-around;
+}
+
+.project-image {
+    margin-top: 25;
+    width: 250px;
+    border-radius: 125px;
+}
+
+.hr {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.example-link {
+    decoration: none;
+    color: black;
 }
