--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,18 @@ section {
 
 footer {
     display: flex;
-    height: inherit;
+    flex-direction: column;
+    margin-top: 500px;
+    background-color: #1c1d25;
+    color: whitesmoke;
+    padding: 100px;
+    text-align: center;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
+    color: whitesmoke;
 }
 
 ul {
@@ -33,7 +39,8 @@ ul {
 }
 
 li {
-    text-decoration: none;
+    /*text-decoration: none;*/
+    color: whitesmoke;
 }
 
 h1 {
@@ -73,11 +80,11 @@ p {
     width: 200px;
     height: 55px;
     border-radius: 25px;
-    background-color: beige;
+    background-color: blanchedalmond; 
     text-align: center;
     font-size: 30px;
     font-weight: 300px;
-    padding-top: 5px;
+    padding-top: 10px;
     margin-top: 20px;
 }
 
@@ -145,9 +152,10 @@ p {
 }
 
 .project-image {
-    margin-top: 25;
+    margin-top: 20PX;
     width: 250px;
-    border-radius: 125px;
+    border: 125px;
+    box-shadow: 5px 5px 20px rgb(192, 192, 192);
 }
 
 .hr {
@@ -156,6 +164,11 @@ p {
 }
 
 .example-link {
-    decoration: none;
-    color: black;
+    text-decoration: none;
+    color: #1c1d25;
+}
+
+a {
+    text-decoration: none;
+    color: whitesmoke;
 }
