--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,11 @@ footer {
     color: whitesmoke;
     padding: 100px;
     text-align: center;
+    font-size: 25px;
+}
+
+.footH {
+    font-size: 60px;
 }
 
 nav {
@@ -134,13 +139,13 @@ p {
 }
 
 .mugShot {
-    width: 400px;
-    border-radius: 200px;
+    width: 165px;
+    border-radius: 35px;
 }
 
 .mugShotContainer {
     display: flex;
-    align-content: center;
+    align-items: flex-start;
 }
 
 .map-example {
@@ -158,12 +163,14 @@ p {
 @media only screen and (max-width: 1000px) {
 
     .subSection {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
     }
 
     .mapsContainer {
-        display: block;
+        display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
 }
 
@@ -205,16 +212,24 @@ a {
     ul {
         display: none;
     }
+
+    h1 {
+        font-size: 50px;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
     footer {
         display: flex;
-        flex-direction: column;
-        margin-top: 2000px;
+        flex-wrap: wrap;
+        font-size: 20px;
+        margin-top: 1500px;
         background-color: #1c1d25;
         color: whitesmoke;
         padding: 100px;
-        text-align: center;
+    }
+    
+    .footH {
+        font-size: 20px;
     }
 }
