--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Source Code Pro', monospace;
+    background-color: mintcream;
 }
 
 section {
@@ -43,12 +44,11 @@ ul {
     font-size: 30px;
 }
 
-/*ul.show {
+ul.show {
     display: block;
-}*/
+}
 
 li {
-    /*text-decoration: none;*/
     color: whitesmoke;
 }
 
@@ -67,8 +67,21 @@ p {
 }
 
 .subtext {
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 300;
+    text-align: center;
+}
+
+.subtextLink {
+    font-size: 15px;
+    font-weight: 400;
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    margin-left: -40.5px;
+    box-shadow: 5px 5px 20px rgb(192, 192, 192);
+    box-
+    background-color: blanchedalmond;
 }
 
 .heroArea {
@@ -153,6 +166,9 @@ p {
     height: 500px;
     box-shadow: 5px 5px 20px rgb(192, 192, 192);
     margin: 10px;
+    position: relative;
+    text-align: center;
+    background-color: #f3eed9;
 }
 
 .mapsContainer {
@@ -181,7 +197,7 @@ p {
     box-shadow: 5px 5px 20px rgb(192, 192, 192);
 }
 
-.hr {
+hr {
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -200,6 +216,10 @@ a {
     display: none;
 }
 
+.hamburger {
+    outline: 0;
+}
+
 @media only screen and (max-width: 1000px) {
     .hamburger {
         display: block;
@@ -207,14 +227,27 @@ a {
         background-color: transparent;
         color: whitesmoke;
         font-size: 30px;
+        margin: 20px;
+        align-self: flex-end;
     }
 
     ul {
         display: none;
+        background-color: #2b2e45;
+        margin: 0px;
     }
 
     h1 {
         font-size: 50px;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .logo {
+        align-self: flex-start;
     }
 }
 
